2007-05-22  Sanel <karijes@users.sourceforge.net>

	* Completed ComboBox.
	* Modified comobox example.
	* Added comobox.jpg inside docs.
	* Added Item.{h,cpp} with test/example/menuitem.cpp
	* Added ESTRLOC as shortand for __FILE__ and __LINE__
	* Updated code for ESTRLOC

2007-05-21  Sanel <karijes@users.sourceforge.net>

	* Added ComboBox.{h,cpp} with test/example/combobox.cpp, althought
	unfinished yet.

2007-05-11  Sanel <karijes@users.sourceforge.net>

	* MimeType functions will do nothing if mime is not correctly
	loaded. Updated tests.
	* Another TODO entry

2007-05-10  Sanel <karijes@users.sourceforge.net>

	* Removed some obsole entries from TODO
	* Added tinyxml classes
	* MimeType class with xdgmime backend; needs more work
	* Finished docs for tinyxml (PITA!)
	* Added icon_name() to MimeType
	* Added tests for MimeType

2007-05-09  Sanel <karijes@users.sourceforge.net>

	* Changed find() functions in String to const

2007-05-08  Sanel <karijes@users.sourceforge.net>

	* Work on Time class
	* String allocation checks
	* user_xxx_dir() will now return correct XDG paths; returning
	paths with '/ede' appended is not conforming

2007-05-07  Sanel <karijes@users.sourceforge.net>

	* dir_separator() will return const char* (why the hell it 
	was returning String?)
	* removed entry (dir_separator() == "/") in test/directory.cpp
	* added build_filename() and build_dirname() functions with tests
	* Added gmtime_r() checks if datetime.m4
	* Date can be set via local date or UTC
	* Fixed NULL defines :)

2007-05-06  Sanel <karijes@users.sourceforge.net>

	* Added Date class with tests
	* Corrected \brief tag for doxygen in rest of the code
	* Cleaned obsolete modules for doxygen
	* index.dox s/prepare/autohen.sh
	* Fixed flawed docs for stringtok; uh!
	* Assertion will dump stack if apropriate functions are available
	* MakeTest will by default link with '-rdynamic' flag, so stack dump
	can be corectly shown

2007-05-05  Sanel <karijes@users.sourceforge.net>
